Fixed overflow

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body {
   color: #000;
   margin: 0;
   font-family: "Open Sans", sans-serif;
+  overflow-x: hidden;
 }
 
 .container {
